Página de perfil não aparece role

--- a/Frontend/Components/Layout/NavMenu.razor
+++ b/Frontend/Components/Layout/NavMenu.razor
@@ -24,6 +24,9 @@
             <NavLink class="nav-link" href="user-info">
                 👨‍💼 Informações Users
             </NavLink>
+            <NavLink class="nav-link" href="perfil">
+                👨‍💼 Perfil
+            </NavLink>
             <NavLink class="nav-link" href="SkillManagement">
                 🛠️ Skills
             </NavLink>
