--- a/Frontend/Components/Layout/NavMenu.razor
+++ b/Frontend/Components/Layout/NavMenu.razor
@@ -15,7 +15,7 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="WorkProposal">
+            <NavLink class="nav-link" href="work-proposal">
                 💼 Work Proposals
             </NavLink>
             <NavLink class="nav-link" href="talent-management">
@@ -24,14 +24,11 @@
             <NavLink class="nav-link" href="user-info">
                 👨‍💼 User Profile
             </NavLink>
-            <NavLink class="nav-link" href="SkillManagement">
+            <NavLink class="nav-link" href="skill-management">
                 🛠️ Skills
             </NavLink>
-            <NavLink class="nav-link" href="Reports">
+            <NavLink class="nav-link" href="reports">
                 📊 Relatórios
-            </NavLink>
-            <NavLink class="nav-link" href="Login">
-                🔐 Entrar
             </NavLink>
         </div>
     </nav>
