--- a/Frontend/Components/Pages/Reports.razor
+++ b/Frontend/Components/Pages/Reports.razor
@@ -1,11 +1,12 @@
-﻿@page "/Reports"
-@using Microsoft.AspNetCore.Components.Web
-@using System.ComponentModel.DataAnnotations
+﻿@page "/reports"
+
 @using Frontend.Helpers
+
 @inject HttpClient Http
 @inject ApiHelper apiHelper
 @inject IJSRuntime JSRuntime
 @inject NavigationManager Navigation
+
 @rendermode InteractiveServer
 
 <h3>Relatórios de Preço Médio Mensal</h3>
