--- a/Frontend/Components/Pages/SkillManagement.razor
+++ b/Frontend/Components/Pages/SkillManagement.razor
@@ -1,12 +1,12 @@
-﻿@page "/SkillManagement"
-@using Microsoft.AspNetCore.Components.Web
+﻿@page "/skill-management"
+
 @using System.ComponentModel.DataAnnotations
-@using Microsoft.AspNetCore.WebUtilities
 @using Frontend.Helpers
+
 @inject HttpClient Http
 @inject IJSRuntime JSRuntime
-@inject ApiHelper apiHelper
 @inject NavigationManager Navigation
+
 @rendermode InteractiveServer
 
 <h3>Gestão de Skills</h3>
